--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<nav class="menu ">
 				<div class="logo col-9">
 					<a href="index.html"><img src="assets/img/logo.png" alt=""><p>Movie Theater</p></a>
-					<a href="#" class="btn-menu" id="btnMenu"><i class="icono fa fa-bars" aria-hidden="true"></i></a>
+					<a href="#" class="btn-menu" id="btnMenu"><i class="icono fa fa-search" aria-hidden="true"></i></a>
 				</div>
 				<div class="enlaces col-3" id='enlaces'>
 					 <input type="txt" placeholder=" Buscar">
@@ -73,7 +73,7 @@
 		</section>
 		<section class="row ">
 			<div class="col-12 video">
-				<iframe width="1240" height="315" src="https://www.youtube.com/embed/ILPlSKjG6Zc" frameborder="0" allowfullscreen></iframe>
+				<iframe width="100%" height="315" src="https://www.youtube.com/embed/ILPlSKjG6Zc" frameborder="0" allowfullscreen></iframe>
 			</div>
 		</section>
 		<section class="row buyTicket">
